# QtBasics

./: .gitignore  compcom2.json
AsSvr2/: AsSvr2.pro  main.cpp  myclient.cpp  myclient.h  myserver.cpp  myserver.h
AssignmentThreading1/: AssignmentThreading1.pro  compile_commands.json  dialog.cpp  dialog.h  dialog.ui  worker.cpp  worker.h
EndriHttpServer/: compile_commands.json  mainwindow.cpp  mainwindow.h  mainwindow.ui
KlaraHttpServer/: compile_commands.json  in.txt.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
MultiServer/: myserver.h
PoolSvr/: PoolSvr.pro  myrunnable.cpp  myrunnable.h  myserver.cpp  myserver.h
QRadio/: QRadio.pro  binary_hex_translation.txt  compile_commands.json  fmdial.cpp  fmdial.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  zendersGent.txt
StringManip/: StringManip.pro  compile_commands.json  main.cpp  stringmanip.cpp  stringmanip.h  stringmanip.ui
alfredoHttpClient/: compile_commands.json  mainwindow.cpp  mainwindow.h  mainwindow.ui
alfredoHttpServer/: alfredoHttpServer.pro  compile_commands.json  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytcpserver.cpp  mytcpserver.h
alfredoTcpClient/: compile_commands.json  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmakeTutorial/: .clangd  CMakeLists.txt  main.cpp  mainwindow.cpp  object.cpp
cmakeTutorial/.cache/clangd/index/: main.cpp.56BAC841ACA10454.idx  mainwindow.cpp.3D04F253931D728C.idx  mainwindow.h.23C6512D9D28C6F6.idx  object.h.081345FBBA61965C.idx
enumExamples/: compile_commands.json  enumExamples.pro  example1.cpp  example2.cpp
fileChooserWithIcon/: main.cpp  (+4 more)
(+170 files in other folders)
